<resources>
    <string name="app_name">NewsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_menu_item">Search</string>
    <string name="navigation_home_text">Home</string>
    <string name="navigation_headlines_text">Headlines</string>
    <string name="navigation_trending_text">Trending</string>
    <string name="navigation_bookmarks_text">Bookmarks</string>
    <string name="separator">|</string>
    <string name="world_tab_text">WORLD</string>
    <string name="business_tab_text">BUSINESS</string>
    <string name="politics_tab_text">POLITICS</string>
    <string name="sports_tab_text">SPORTS</string>
    <string name="technology_tab_text">TECHNOLOGY</string>
    <string name="science_tab_text">SCIENCE</string>
    <string name="trending_enter_search_term_text">Enter Search Term:</string>
    <string name="trending_default_search">CoronaVirus</string>
    <string name="no_bookmarked_articles_text">No Bookmarked Articles</string>
    <string name="loading_string">Fetching News</string>
</resources>
